--- a/prototype/src/scss/components/navigation.scss
+++ b/prototype/src/scss/components/navigation.scss
@@ -475,45 +475,24 @@
 
 			}
 
+			&:hover {
+
+				.sub-menu {
+					display: block;
+				}
+
+			}
+
 			.sub-menu {
 				position: absolute;
-				top: 58px;
+				top: 90px;
 				background-color: $color-light;
 				width: auto;
 				list-style: none;
-				padding: 3px;
+				padding: 5px;
 				transition: all 300ms ease;
-				overflow: hidden;
-				opacity: 0;
-				visibility: hidden;
-				max-height: 0;
+				display: none;
 				z-index: 9999;
-
-				&:before {
-					display: block;
-					position: absolute;
-					content: '';
-					top: 0;
-					left: 50%;
-					transition: all 300ms ease;
-					width: 0;
-					height: 3px;
-					background-color: $color-tertiary;
-					z-index: 0;
-				}
-
-				&:after {
-					display: block;
-					position: absolute;
-					content: '';
-					top: 0;
-					left: 0;
-					transition: all 300ms ease;
-					width: 0;
-					height: 3px;
-					background-color: $color-tertiary;
-					z-index: 0;
-				}
 
 				li {
 					float: none;
@@ -531,22 +510,21 @@
 
 					a {
 						display: block;
-						height: 40px;
-						line-height: 40px;
+						height: 30px;
+						line-height: 30px;
 						font-size: 12px;
 						font-weight: 500;
 						color: $color-primary;
 						text-decoration: none;
 						text-transform: uppercase;
-						padding: 0 12px;
-						letter-spacing: 0.5px;
+						padding: 0 10px;
+						letter-spacing: 1px;
 						position: relative;
 						transition: all 250ms ease;
 						white-space: nowrap;
 
 						&:hover {
 							color: $color-tertiary;
-							transform: translateX(7px);
 						}
 
 					}
